2007-06-07  Gilles Dartiguelongue  <dartigug@esiee.fr>

	* mail-to-meeting.c: (add_attendee_cb): more compilation
	warnings cleanup, completes bug #437584 fixes

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-mail-to-meeting.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2005-05-11  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: added built_sources/cleanfiles

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: 

	* org-gnome-mail-to-meeting.eplug.xml: s/.in/.xml/ & i18n.

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-mail-to-meeting.eplug.in: Shortened the name and added
	a . to the end of the description.

2004-11-04  Rodrigo Moya <rodrigo@novell.com>

	* org-gnome-mail-to-meeting.eplug.in: fixed description and added
	author's info, to display correctly on the plugin manager.

2004-11-03  Not Zed  <NotZed@Ximian.com>

	* org-gnome-mail-to-meeting.eplug.in: fix the popup id.

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist .eplug.in file

2004-10-29  Rodrigo Moya <rodrigo@novell.com>

	* org-gnome-mail-to-meeting.eplug.in: fix folder view popup id and
	use stock icon for meetings.

2004-10-29  Rodrigo Moya <rodrigo@novell.com>

	* added mail-to-meeting plugin, to convert mails to meetings.