@@ -16,8 +16,8 @@
 	  path="72.mail_to_meeting"
 	  icon="stock_new-meeting"
 	  _label="Con_vert to Meeting"
-	  enable="one"
-	  visible="one"
+	  enable="many"
+	  visible="many"
 	  activate="org_gnome_mail_to_meeting"/>
       </menu>
     </hook>
